--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = ststm32
 board = nucleo_f746zg
 framework = arduino
-lib_deps = stm32duino/STM32duino FreeRTOS@^10.3.2
+lib_deps = 
+	stm32duino/STM32duino FreeRTOS@^10.3.2
+	pololu/LSM6@^2.0.1
+	pololu/LIS3MDL@^2.0.0
