Refactor the project

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,4 @@ board = nucleo_f746zg
 framework = arduino
 lib_deps = 
 	stm32duino/STM32duino FreeRTOS@^10.3.2
-	pololu/LSM6@^2.0.1
-	pololu/LIS3MDL@^2.0.0
+	jrowberg/I2Cdevlib-MPU6050@^1.0.0
