base of the implementation for the position orientation

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,8 @@ framework = arduino
 lib_deps = 
 	stm32duino/STM32duino FreeRTOS@^10.3.2
 	jrowberg/I2Cdevlib-MPU6050@^1.0.0
+	stm32duino/STM32duino LSM6DS3@^2.0.0
+	adafruit/Adafruit LSM6DS@^4.7.4
+	adafruit/Adafruit LIS3MDL@^1.2.4
+	stm32duino/STM32duino LIS3MDL@^2.0.0
+	adafruit/Adafruit MMC56x3@^1.0.2
